# scratch-show

./: README.md  anime.csv  main.py  movies.csv  pyproject.toml  secrets.toml  tv_shows.csv
pages/: anime.py  movies.py  tv_show.py
